--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 # Comments start with #
-/node_modules/     # ignore at repo root only
+node_modules/     # ignore at repo root only
+.DS_Store        # macOS file system metadata
+.env             # environment variables file
